--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,6 @@
-auxiliary.org-netbeans-modules-javascript-karma.enabled=false
-browser=Chrome.INTEGRATED
-external.project.url=http://localhost/PVault
-server=EXTERNAL
+copy.src.files=false
+copy.src.on.open=false
+copy.src.target=/Applications/MAMP/htdocs/PVault
+index.file=index.php
+run.as=LOCAL
+url=http://localhost/CS160_WEB/
